--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -7,56 +7,71 @@
         </title>
         <link rel="stylesheet"
               href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-              integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
               crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg nav-custom">
-            <div class="container d-flex justify-content-between">
-                <ul class="nav navbar-nav justify-content-center flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'closed' %}">Closed Listings</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'categories' %}">Categories</a>
-                    </li>
-                    {% if user.is_authenticated %}
+        <nav class="navbar navbar-expand-lg navbar-dark nav-custom">
+            <div class="container">
+                <a class="navbar-brand" href="{% url 'index' %}">Auctions</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'create_listing' %}">Create Listing</a>
-                        </li>
-                    {% endif %}
-                    {% if user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'view_watchlist' %}">Watchlist</a>
+                            <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                            <a class="nav-link" href="{% url 'closed' %}">Closed Listings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'register' %}">Register</a>
+                            <a class="nav-link" href="{% url 'categories' %}">Categories</a>
                         </li>
-                    {% endif %}
-                </ul>
-                <span class="navbar-text text-muted ml-auto">
-                    {% if user.is_authenticated %}
-                        Signed in as <strong>{{ user.username }}</strong>.
-                    {% else %}
-                        Not signed in.
-                    {% endif %}
-                </span>
+                        {% if user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'create_listing' %}">Create Listing</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'view_watchlist' %}">Watchlist</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'register' %}">Register</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                    <span class="navbar-text ml-lg-3">
+                        {% if user.is_authenticated %}
+                            Signed in as <strong>{{ user.username }}</strong>.
+                        {% else %}
+                            Not signed in.
+                        {% endif %}
+                    </span>
+                </div>
             </div>
         </nav>
         <hr>
         {% block body %}
         {% endblock %}
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+        <script>
+            document.addEventListener("DOMContentLoaded", function() {
+                var toggler = document.querySelector('.navbar-toggler');
+                var collapse = document.querySelector('#navbarNav');
+
+                toggler.addEventListener('click', function() {
+                    collapse.classList.toggle('show');
+                });
+            });
+        </script>
     </body>
 </html>
